# spider-earthdata

./: .gitignore  MANIFEST.in  README.md  setup.py
example/: download_MAIAC.py  download_MCD43A3_tif.py  download_MOD35.py  download_gedi.py  download_landsat.py  download_one_year.py  download_s5p.py
example/ladsweb/: download_infos_from_ladsweb.py
spided/: __init__.py  downloader.py  info.py  log.py  util.py
spider_earthdata.egg-info/: PKG-INFO  SOURCES.txt
src/spided/: __init__.py  check.py  downloader.py  info.py  strategy.py  util.py
src/spided/platform/: __init__.py  earthdata_nasa.py  earthexplorer_usgs.py  s5phub.py
trash/: pyproject.toml
trash/scripts/: download_LAADS_data_custom.py  download_LAADS_orders_custom.py  download_MOD04_hdf.py  download_MOD09A1.py  download_MOD09GA.py  download_MxD35_L2.py  download_gedi.py  get_url_MAIAC.py
trash/src/spided/: check.py  downloader.py  strategy.py  util.py
trash/src/spided/platform/: earthdata_nasa.py
